make function work

--- a/db-spring-jdbc/src/test/resources/db.properties
+++ b/db-spring-jdbc/src/test/resources/db.properties
@@ -1,1 +1,5 @@
-jdbc.driverClassName=com.mysql.jdbc.Driver
+db.driverClassName=com.mysql.jdbc.Driver
+
+db.url=jdbc:mysql://172.16.117.226:3306/ent_portal?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true
+db.userName=ent_all
+db.password=ent
