--- a/db-api/build.gradle
+++ b/db-api/build.gradle
@@ -23,8 +23,8 @@ repositories {
 }
 dependencies {
     testCompile 'junit:junit:4.12'
-
-    compile group: 'commons-codec', name: 'commons-codec', version: '1.10'
+    compile project(":gen-api")
+    compile group: 'commons-codec', name: 'commons-codec', version: '1.11'
     compile group: 'commons-net', name: 'commons-net', version: '3.5'
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
 //    compile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.25'
