--- a/db-spring-jdbc/build.gradle
+++ b/db-spring-jdbc/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     compile group: 'org.springframework', name: 'spring-jdbc', version: '4.3.3.RELEASE'
     compile group: 'org.springframework', name: 'spring-beans', version: '4.3.3.RELEASE'
     compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.18'
+    compile group: 'com.zaxxer', name: 'HikariCP', version:'2.7.8'
 }
 
 //task(copyTask);
