--- a/compilor-test/build.gradle
+++ b/compilor-test/build.gradle
@@ -1,7 +1,30 @@
 import javax.tools.JavaCompiler
 
-apply plugin: 'java'
-apply plugin: 'maven'
+buildscript {
+    repositories {
+        maven {
+            mavenLocal()
+            maven { url "http://repo.maven.apache.org/maven2" }
+            url "https://plugins.gradle.org/m2/"
+        }
+    }
+    ext {
+        springBootVersion = '2.0.0.RELEASE'
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+        classpath "io.spring.gradle:dependency-management-plugin:1.0.6.RELEASE"
+    }
+}
+
+plugins {
+    id 'java'
+    id 'eclipse'
+    id 'application'
+    id 'org.springframework.boot' version "2.0.0.RELEASE"
+    id 'io.spring.dependency-management' version "1.0.6.RELEASE"
+}
+
 //apply plugin: 'application'
 
 sourceCompatibility = 1.8
@@ -14,14 +37,20 @@ repositories {
     maven { url "http://repo.maven.apache.org/maven2" }
 }
 dependencies {
+    implementation('org.springframework.boot:spring-boot-starter-data-redis')
+    implementation('org.springframework.boot:spring-boot-starter-web'){
+//		exclude group: "org.springframework.boot" :"spring-boot-starter-json"
+    }
+    implementation("org.springframework.boot:spring-boot-starter-jdbc")
     // The production code uses the SLF4J logging API at compile time
     compile 'org.slf4j:slf4j-api:1.7.21'
 //    compile 'com.helger:jcodemodel:3.0.0'
     compile group: 'commons-codec', name: 'commons-codec', version: '1.10'
     compile group: 'com.google.code.gson', name: 'gson', version:'2.2.4'
     compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.18'
-    compile group: 'org.springframework', name: 'spring-webmvc', version:'4.3.3.RELEASE'
-    compile group: 'org.springframework', name: 'spring-jdbc', version:'4.3.3.RELEASE'
+
+//    compile group: 'org.springframework', name: 'spring-webmvc', version:'4.3.3.RELEASE'
+//    compile group: 'org.springframework', name: 'spring-jdbc', version:'4.3.3.RELEASE'
 //    compile group: 'ch.qos.logback', name: 'ch.qos.logback', version: '1.0.13'
 //    compile group: 'log4j', name: 'log4j', version: '1.2.17'
     compile fileTree("$rootDir/libs/")
