--- a/gen-base/build.gradle
+++ b/gen-base/build.gradle
@@ -1,5 +1,27 @@
-apply plugin: 'java'
-apply plugin: 'maven'
+buildscript {
+    repositories {
+        maven {
+            mavenLocal()
+            maven { url "http://repo.maven.apache.org/maven2" }
+            url "https://plugins.gradle.org/m2/"
+        }
+    }
+    ext {
+        springBootVersion = '2.0.0.RELEASE'
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+        classpath "io.spring.gradle:dependency-management-plugin:1.0.6.RELEASE"
+    }
+}
+
+plugins {
+    id 'java'
+    id 'eclipse'
+    id 'application'
+    id 'org.springframework.boot' version "2.0.0.RELEASE"
+    id 'io.spring.dependency-management' version "1.0.6.RELEASE"
+}
 //apply plugin: 'application'
 
 sourceCompatibility = 1.8
@@ -15,18 +37,20 @@ dependencies {
     // The production code uses the SLF4J logging API at compile time
     compile 'org.slf4j:slf4j-api:1.7.25'
     compile 'ch.qos.logback:logback-classic:1.2.3'
+    implementation('org.springframework.boot:spring-boot-starter-web')
+    implementation("org.springframework.boot:spring-boot-starter-jdbc")
 //    compile 'com.helger:jcodemodel:3.0.0'
     compile group: 'commons-codec', name: 'commons-codec', version: '1.10'
     compile group: 'com.google.code.gson', name: 'gson', version:'2.2.4'
     compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.18'
-    compile group: 'org.springframework', name: 'spring-webmvc', version:'4.3.3.RELEASE'
-    compile group: 'org.springframework', name: 'spring-jdbc', version:'4.3.3.RELEASE'
+//    compile group: 'org.springframework', name: 'spring-webmvc', version:'4.3.3.RELEASE'
+//    compile group: 'org.springframework', name: 'spring-jdbc', version:'4.3.3.RELEASE'
     compile group: 'org.yaml', name: 'snakeyaml', version: '1.23'
 //    compile group: 'ch.qos.logback', name: 'ch.qos.logback', version: '1.0.13'
 //    compile group: 'log4j', name: 'log4j', version: '1.2.17'
 
     compile 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.9.2'
-
+    compile 'org.antlr:ST4:4.3'
     compile fileTree("$rootDir/libs/")
 //    compile 'com.cs.seastar.libs:base:5.1'
 //    compile 'com.cs.seastar.libs:data_store-api:5.1'
