--- a/code-model/build.gradle
+++ b/code-model/build.gradle
@@ -12,12 +12,13 @@ tasks.withType(JavaCompile) {
 	options.encoding = 'UTF-8'
 }
 
-
-
 repositories {
-        
-     maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
-     maven { url "http://repo.maven.apache.org/maven2" }
+    mavenLocal()
+    maven { url "http://maven.aliyun.com/nexus/content/groups/public/"}
+    maven { url "https://repo.maven.apache.org/maven2" }
+    mavenCentral()
+//    maven { url "http://112.74.19.176:8081/repository/maven-central/" }
+//    maven { url "https://repo.maven.apache.org/maven2" }
 }
 dependencies {
     compile group: 'com.google.code.findbugs', name: 'annotations', version:'3.0.1u2'
