--- a/compilor-test/build.gradle
+++ b/compilor-test/build.gradle
@@ -4,12 +4,13 @@ buildscript {
     repositories {
         maven {
             mavenLocal()
-            maven { url "http://repo.maven.apache.org/maven2" }
+			maven { url "http://maven.aliyun.com/nexus/content/groups/public/"}
+            maven { url "https://repo.maven.apache.org/maven2" }
             url "https://plugins.gradle.org/m2/"
         }
     }
     ext {
-        springBootVersion = '2.0.0.RELEASE'
+        springBootVersion = '2.2.9.RELEASE'
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
@@ -21,7 +22,7 @@ plugins {
     id 'java'
     id 'eclipse'
     id 'application'
-    id 'org.springframework.boot' version "2.0.0.RELEASE"
+    id 'org.springframework.boot' version "2.2.9.RELEASE"
     id 'io.spring.dependency-management' version "1.0.6.RELEASE"
 }
 
@@ -32,16 +33,15 @@ targetCompatibility = 1.8
 
 repositories {
     mavenLocal()
+    maven { url "http://maven.aliyun.com/nexus/content/groups/public/"}
+    maven { url "https://repo.maven.apache.org/maven2" }
     mavenCentral()
-    maven { url "http://112.74.19.176:8081/repository/maven-central/" }
-    maven { url "http://repo.maven.apache.org/maven2" }
+
 }
 dependencies {
     implementation('org.springframework.boot:spring-boot-starter-data-redis')
-    implementation('org.springframework.boot:spring-boot-starter-web'){
-//		exclude group: "org.springframework.boot" :"spring-boot-starter-json"
-    }
-    implementation("org.springframework.boot:spring-boot-starter-jdbc")
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.2.9.RELEASE'
+    compile group: 'org.springframework', name: 'spring-jdbc', version: '5.0.4.RELEASE'
     // The production code uses the SLF4J logging API at compile time
     compile 'org.slf4j:slf4j-api:1.7.21'
 //    compile 'com.helger:jcodemodel:3.0.0'
@@ -58,6 +58,7 @@ dependencies {
 //    compile 'com.cs.seastar.libs:data_store-api:5.1'
 //    compile project(":code-model")
     compile project(":gen-base")
+    compile project(":compilor-base")
     testCompile 'junit:junit:4.12'
 }
 
