--- a/maven-plugin/build.gradle
+++ b/maven-plugin/build.gradle
@@ -7,9 +7,15 @@ targetCompatibility = 1.8
 
 repositories {
     mavenLocal()
+
+    maven { url "http://maven.aliyun.com/nexus/content/groups/public/"}
+    maven {
+        url "https://plugins.gradle.org/m2/"
+    }
+    maven { url "https://repo.maven.apache.org/maven2" }
     mavenCentral()
-    maven { url "http://112.74.19.176:8081/repository/maven-central/" }
-    maven { url "http://repo.maven.apache.org/maven2" }
+//    maven { url "http://112.74.19.176:8081/repository/maven-central/" }
+//    maven { url "https://repo.maven.apache.org/maven2" }
 }
 
 def version_maven="2.2.1";
