--- a/sqlGen/build.gradle
+++ b/sqlGen/build.gradle
@@ -14,11 +14,17 @@ tasks.withType(JavaCompile) {
 
 configurations.all {
 }
-
 repositories {
-        
-     maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
-     maven { url "http://repo.maven.apache.org/maven2" }
+    mavenLocal()
+
+    maven { url "http://maven.aliyun.com/nexus/content/groups/public/"}
+    maven {
+        url "https://plugins.gradle.org/m2/"
+    }
+    maven { url "https://repo.maven.apache.org/maven2" }
+    mavenCentral()
+//    maven { url "http://112.74.19.176:8081/repository/maven-central/" }
+//    maven { url "https://repo.maven.apache.org/maven2" }
 }
 dependencies {
     testCompile group: 'junit', name: 'junit', version:'3.8.2'
