--- a/gen-base/db-ny.properties
+++ b/gen-base/db-ny.properties
@@ -5,12 +5,12 @@ jdbc.driverClassName=com.mysql.jdbc.Driver
 #jdbc.url=jdbc:mysql://127.0.0.1:4000/ent_cms?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true
 #jdbc.username=ent_all
 #jdbc.password=ent
-jdbc.url=jdbc:mysql://127.0.0.1:4000/ent_portal?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true
+jdbc.url=jdbc:mysql://127.0.0.1:4000/new_main_schema?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true
 jdbc.username=aduser
 jdbc.password=asdf1234
 
 
-ent_activities.jdbc.url=jdbc:mysql://127.0.0.1:4000/ent_knownleag_base?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true
+ent_activities.jdbc.url=jdbc:mysql://127.0.0.1:4000/robot_control_system?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true
 ent_activities.jdbc.username=aduser
 ent_activities.jdbc.password=asdf1234
 
