--- a/gen-base/db.properties
+++ b/gen-base/db.properties
@@ -1,7 +1,7 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
 
 
-jdbc.url=jdbc:mysql://127.0.0.1:4000/ent_portal?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true
+jdbc.url=jdbc:mysql://127.0.0.1:3306/data_migration?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true
 jdbc.username=aduser
 jdbc.password=asdf1234
 
